Upgrade camel-pubnub to v9 client